:bug: Fully fix scrollbar image in dark mode

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -189,12 +189,11 @@ p {
 	}
 
 	@for $i from 1 through 2 {
-		$is-light: $i == 1;
-		$color-scheme: if($is-light, "light", "dark");
-		$fill: if($is-light, "black", "white");
+		$color-scheme: if($i == 1, "", ".dark");
+		$fill: if($i == 1, "black", "white");
 		$opacity: 0.4458;
 
-		@media (prefers-color-scheme: $color-scheme) { // TODO: 这种只能检测系统颜色模式，不支持手动设定的颜色模式。
+		html#{$color-scheme} & {
 			&:vertical {
 				&:decrement {
 					background-image: url("data:image/svg+xml,%3Csvg width='8' height='8' viewBox='0 0 8 8' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.992188 6.96094C0.854167 6.96094 0.72526 6.9349 0.605469 6.88281C0.485677 6.82812 0.380208 6.75651 0.289062 6.66797C0.200521 6.57682 0.130208 6.47135 0.078125 6.35156C0.0260417 6.22917 0 6.09896 0 5.96094C0 5.85156 0.0143229 5.7513 0.0429688 5.66016C0.0742188 5.56901 0.119792 5.47917 0.179688 5.39062L2.78125 1.60547C2.84896 1.50651 2.92839 1.41927 3.01953 1.34375C3.11068 1.26823 3.20833 1.20573 3.3125 1.15625C3.41927 1.10417 3.53125 1.0651 3.64844 1.03906C3.76562 1.01302 3.88281 1 4 1C4.11719 1 4.23438 1.01302 4.35156 1.03906C4.46875 1.0651 4.57943 1.10417 4.68359 1.15625C4.79036 1.20573 4.88932 1.26823 4.98047 1.34375C5.07161 1.41927 5.15104 1.50651 5.21875 1.60547L7.82031 5.39062C7.88021 5.47917 7.92448 5.56901 7.95312 5.66016C7.98438 5.7513 8 5.85156 8 5.96094C8 6.09896 7.97396 6.22917 7.92188 6.35156C7.86979 6.47135 7.79948 6.57682 7.71094 6.66797C7.6224 6.75651 7.51693 6.82812 7.39453 6.88281C7.27474 6.9349 7.14714 6.96094 7.01172 6.96094H0.992188Z' fill='#{$fill}' fill-opacity='#{$opacity}'/%3E%3C/svg%3E");
